# holodeck-rust

./: ABSTRACTION.md  AGENT.md  CHARTER.md  Cargo.toml  PLAYTEST-REPORT.md  README.md  SUCCESS-FAILURE-LOG.md  holodeck-consolidation.md
.github/workflows/: ci.yml
memory/: JOURNAL.md
src/: agent.rs  combat.rs  comms.rs  director.rs  evolution.rs  games.rs  gauge.rs  holodeck.rs  lib.rs  main.rs  manual.rs  npc.rs  npc_refresh.rs  permission.rs  plato_bridge.rs  room.rs  sentiment_npc.rs  sonar_vision.rs
tests/: agent_tests.rs
