[package]
name = "holodeck-rust"
version = "0.3.1"
edition = "2021"
description = "GPU-accelerated simulation environment for Cocapn fleet. Sentiment-aware NPCs, S1-3 tile format, DEADBAND protocol."

[lib]
name = "holodeck_rust"
path = "src/lib.rs"

[[bin]]
name = "holodeck-rust"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
env_logger = "0.10"
